provider compilation errors